--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
   compile 'com.android.support:support-vector-drawable:25.2.0'
   testCompile 'junit:junit:4.12'
   compile 'com.android.support:recyclerview-v7:25.2.0'
+  compile 'com.android.support:palette-v7:25.2.0'
 }
