--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: android   # 声明构建语言环境
 notifications:      # 每次构建的时候是否通知，如果不想收到通知邮箱（个人感觉邮件贼烦），那就设置false吧
   email: false
 sudo: false
-
+before_install:
+ - chmod +x gradlew #修改Gradle权限
 android:            # 配置信息
     components:
       - tools                        # to get the new `repository-11.xml`
