--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: android   # 声明构建语言环境
 notifications:      # 每次构建的时候是否通知，如果不想收到通知邮箱（个人感觉邮件贼烦），那就设置false吧
   email: false
 sudo: false
+
+#To add support for lambda expressions, make sure to specify JDK 8 or higher:
 jdk:
    - oraclejdk8
 before_script:
@@ -18,4 +20,15 @@ android:            # 配置信息
 script:
    - ./gradlew build assembleRelease
 
-#To add support for lambda expressions, make sure to specify JDK 8 or higher:
+
+before_deploy:
+  - mv app/build/outputs/apk/app-release.apk app/build/outputs/apk/Test.apk
+deploy:
+  provider: releases
+  api_key:
+    secure: "Token"
+  file: app/build/outputs/apk/Test.apk
+  skip_cleanup: true
+  on:
+    tags: true
+
